# AdversarialCBO

./: .gitignore  README.md  pyproject.toml
advcbx/: utils.py
advcbx/attackspace/: __init__.py  base.py  dct.py  fourier.py  image.py  index.py  load_attack.py  low_res.py  square.py
advcbx/data/: __init__.py  load_data.py
advcbx/models/: __init__.py  load_model.py  madry_mnist.py
advcbx/optim/: AntitheticCBO.py  CBOattack.py  HoppingCBO.py  NESattack.py  NESattackOrig.py  OPOCBO.py  OrthoCBO.py  RandomSearch.py  SCBO.py  SignedCBO.py  __init__.py  base.py  foolbox.py  load_optim.py  nevergrad.py  simba.py  square_attack.py  squares.py  torch_utils.py
experiments/: main.py
experiments/conf/: CBO_DCT_LS_untargeted.yaml  CBO_DCT_untargeted.yaml  CBO_DCT_untargeted_CIFAR.yaml  CBO_LowRes_targeted.yaml  CBO_LowRes_targeted_CIFAR.yaml  CBO_LowRes_untargeted.yaml  CBO_LowRes_untargeted_num_res.yaml  CBO_Madry_MNIST.yaml  CBO_Pixel_untargeted.yaml  CBO_Pixel_untargeted_num_pix.yaml  CBO_Square_LS_untargeted.yaml  CBO_Square_LS_untargeted_lamda.yaml  CBO_Square_untargeted.yaml  CBO_exp.yaml  HoppingCBO_DCT_untargeted.yaml  HoppingCBO_DCT_untargeted_CIFAR.yaml  HoppingCBO_LowRes_targeted.yaml  HoppingCBO_LowRes_targeted_CIFAR.yaml  HoppingCBO_LowRes_untargeted.yaml  HoppingCBO_Pixel_untargeted.yaml  HoppingCBO_Square_untargeted.yaml  HoppingCBO_exp.yaml  ImageNet.yaml  MNIST.yaml  NES_DCT_untargeted.yaml  NES_DCT_untargeted_CIFAR.yaml  NES_LowRes_targeted.yaml  NES_LowRes_targeted_CIFAR.yaml  NES_LowRes_untargeted.yaml  NES_Pixel_untargeted.yaml  PolarCBO_exp.yaml  (+14 more)
(+162 files in other folders)
